deploy: ff5a185ded6b72c8ebe2830e025b189baf2dc045

--- a/classes/_local_main_.services.wpcli.html
+++ b/classes/_local_main_.services.wpcli.html
@@ -87,6 +87,8 @@
 							<ul class="tsd-index-list">
 								<li class="tsd-kind-method tsd-parent-kind-class"><a href="_local_main_.services.wpcli.html#coreupdate" class="tsd-kind-icon">core<wbr>Update</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-class"><a href="_local_main_.services.wpcli.html#getoption" class="tsd-kind-icon">get<wbr>Option</a></li>
+								<li class="tsd-kind-method tsd-parent-kind-class"><a href="_local_main_.services.wpcli.html#getwplatestversion" class="tsd-kind-icon">get<wbr>WpLatest<wbr>Version</a></li>
+								<li class="tsd-kind-method tsd-parent-kind-class"><a href="_local_main_.services.wpcli.html#getwpversion" class="tsd-kind-icon">get<wbr>WpVersion</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-class"><a href="_local_main_.services.wpcli.html#isinstalled" class="tsd-kind-icon">is<wbr>Installed</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-class"><a href="_local_main_.services.wpcli.html#ismultisite" class="tsd-kind-icon">is<wbr>Multisite</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-class"><a href="_local_main_.services.wpcli.html#listen" class="tsd-kind-icon">listen</a></li>
@@ -108,7 +110,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/a54bd95/main.d.ts#L1026">main.d.ts:1026</a></li>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/ff5a185/main.d.ts#L1022">main.d.ts:1022</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -134,7 +136,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/a54bd95/main.d.ts#L1024">main.d.ts:1024</a></li>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/ff5a185/main.d.ts#L1020">main.d.ts:1020</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -151,6 +153,52 @@
 					</ul>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class">
+					<a name="getwplatestversion" class="tsd-anchor"></a>
+					<h3>get<wbr>WpLatest<wbr>Version</h3>
+					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class">
+						<li class="tsd-signature tsd-kind-icon">get<wbr>WpLatest<wbr>Version<span class="tsd-signature-symbol">(</span>site<span class="tsd-signature-symbol">: </span><a href="_local_.site.html" class="tsd-signature-type">Site</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">null</span><span class="tsd-signature-symbol">&gt;</span></li>
+					</ul>
+					<ul class="tsd-descriptions">
+						<li class="tsd-description">
+							<aside class="tsd-sources">
+								<ul>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/ff5a185/main.d.ts#L1030">main.d.ts:1030</a></li>
+								</ul>
+							</aside>
+							<h4 class="tsd-parameters-title">Parameters</h4>
+							<ul class="tsd-parameters">
+								<li>
+									<h5>site: <a href="_local_.site.html" class="tsd-signature-type">Site</a></h5>
+								</li>
+							</ul>
+							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">null</span><span class="tsd-signature-symbol">&gt;</span></h4>
+						</li>
+					</ul>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class">
+					<a name="getwpversion" class="tsd-anchor"></a>
+					<h3>get<wbr>WpVersion</h3>
+					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class">
+						<li class="tsd-signature tsd-kind-icon">get<wbr>WpVersion<span class="tsd-signature-symbol">(</span>site<span class="tsd-signature-symbol">: </span><a href="_local_.site.html" class="tsd-signature-type">Site</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">null</span><span class="tsd-signature-symbol">&gt;</span></li>
+					</ul>
+					<ul class="tsd-descriptions">
+						<li class="tsd-description">
+							<aside class="tsd-sources">
+								<ul>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/ff5a185/main.d.ts#L1028">main.d.ts:1028</a></li>
+								</ul>
+							</aside>
+							<h4 class="tsd-parameters-title">Parameters</h4>
+							<ul class="tsd-parameters">
+								<li>
+									<h5>site: <a href="_local_.site.html" class="tsd-signature-type">Site</a></h5>
+								</li>
+							</ul>
+							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">null</span><span class="tsd-signature-symbol">&gt;</span></h4>
+						</li>
+					</ul>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class">
 					<a name="isinstalled" class="tsd-anchor"></a>
 					<h3>is<wbr>Installed</h3>
 					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class">
@@ -160,7 +208,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/a54bd95/main.d.ts#L1028">main.d.ts:1028</a></li>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/ff5a185/main.d.ts#L1024">main.d.ts:1024</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -183,7 +231,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/a54bd95/main.d.ts#L1030">main.d.ts:1030</a></li>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/ff5a185/main.d.ts#L1026">main.d.ts:1026</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -206,7 +254,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/a54bd95/main.d.ts#L1020">main.d.ts:1020</a></li>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/ff5a185/main.d.ts#L1016">main.d.ts:1016</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
@@ -223,7 +271,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/a54bd95/main.d.ts#L1022">main.d.ts:1022</a></li>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/ff5a185/main.d.ts#L1018">main.d.ts:1018</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -264,6 +312,12 @@
 							</li>
 							<li class=" tsd-kind-method tsd-parent-kind-class">
 								<a href="_local_main_.services.wpcli.html#getoption" class="tsd-kind-icon">get<wbr>Option</a>
+							</li>
+							<li class=" tsd-kind-method tsd-parent-kind-class">
+								<a href="_local_main_.services.wpcli.html#getwplatestversion" class="tsd-kind-icon">get<wbr>WpLatest<wbr>Version</a>
+							</li>
+							<li class=" tsd-kind-method tsd-parent-kind-class">
+								<a href="_local_main_.services.wpcli.html#getwpversion" class="tsd-kind-icon">get<wbr>WpVersion</a>
 							</li>
 							<li class=" tsd-kind-method tsd-parent-kind-class">
 								<a href="_local_main_.services.wpcli.html#isinstalled" class="tsd-kind-icon">is<wbr>Installed</a>
