--- a/interfaces/_local_main_.services.wpclirunopts.html
+++ b/interfaces/_local_main_.services.wpclirunopts.html
@@ -85,7 +85,10 @@
 						<section class="tsd-index-section ">
 							<h3>Properties</h3>
 							<ul class="tsd-index-list">
+								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="_local_main_.services.wpclirunopts.html#env" class="tsd-kind-icon">env</a></li>
 								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="_local_main_.services.wpclirunopts.html#ignoreerrors" class="tsd-kind-icon">ignore<wbr>Errors</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="_local_main_.services.wpclirunopts.html#skipplugins" class="tsd-kind-icon">skip<wbr>Plugins</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="_local_main_.services.wpclirunopts.html#skipthemes" class="tsd-kind-icon">skip<wbr>Themes</a></li>
 							</ul>
 						</section>
 					</div>
@@ -94,12 +97,42 @@
 			<section class="tsd-panel-group tsd-member-group ">
 				<h2>Properties</h2>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
+					<a name="env" class="tsd-anchor"></a>
+					<h3><span class="tsd-flag ts-flagOptional">Optional</span> env</h3>
+					<div class="tsd-signature tsd-kind-icon">env<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">ProcessEnv</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/ff5a185/main.d.ts#L1012">main.d.ts:1012</a></li>
+						</ul>
+					</aside>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
 					<a name="ignoreerrors" class="tsd-anchor"></a>
 					<h3><span class="tsd-flag ts-flagOptional">Optional</span> ignore<wbr>Errors</h3>
 					<div class="tsd-signature tsd-kind-icon">ignore<wbr>Errors<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/a54bd95/main.d.ts#L1016">main.d.ts:1016</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/ff5a185/main.d.ts#L1009">main.d.ts:1009</a></li>
+						</ul>
+					</aside>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
+					<a name="skipplugins" class="tsd-anchor"></a>
+					<h3><span class="tsd-flag ts-flagOptional">Optional</span> skip<wbr>Plugins</h3>
+					<div class="tsd-signature tsd-kind-icon">skip<wbr>Plugins<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/ff5a185/main.d.ts#L1011">main.d.ts:1011</a></li>
+						</ul>
+					</aside>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
+					<a name="skipthemes" class="tsd-anchor"></a>
+					<h3><span class="tsd-flag ts-flagOptional">Optional</span> skip<wbr>Themes</h3>
+					<div class="tsd-signature tsd-kind-icon">skip<wbr>Themes<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/ff5a185/main.d.ts#L1010">main.d.ts:1010</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -121,7 +154,16 @@
 						<a href="_local_main_.services.wpclirunopts.html" class="tsd-kind-icon">Wp<wbr>Cli<wbr>Run<wbr>Opts</a>
 						<ul>
 							<li class=" tsd-kind-property tsd-parent-kind-interface">
+								<a href="_local_main_.services.wpclirunopts.html#env" class="tsd-kind-icon">env</a>
+							</li>
+							<li class=" tsd-kind-property tsd-parent-kind-interface">
 								<a href="_local_main_.services.wpclirunopts.html#ignoreerrors" class="tsd-kind-icon">ignore<wbr>Errors</a>
+							</li>
+							<li class=" tsd-kind-property tsd-parent-kind-interface">
+								<a href="_local_main_.services.wpclirunopts.html#skipplugins" class="tsd-kind-icon">skip<wbr>Plugins</a>
+							</li>
+							<li class=" tsd-kind-property tsd-parent-kind-interface">
+								<a href="_local_main_.services.wpclirunopts.html#skipthemes" class="tsd-kind-icon">skip<wbr>Themes</a>
 							</li>
 						</ul>
 					</li>
