--- a/modules/_local_main_.services.html
+++ b/modules/_local_main_.services.html
@@ -117,7 +117,6 @@
 								<li class="tsd-kind-class tsd-parent-kind-namespace"><a href="../classes/_local_main_.services.router.html" class="tsd-kind-icon">Router</a></li>
 								<li class="tsd-kind-class tsd-parent-kind-namespace"><a href="../classes/_local_main_.services.sequelpro.html" class="tsd-kind-icon">Sequel<wbr>Pro</a></li>
 								<li class="tsd-kind-class tsd-parent-kind-namespace"><a href="../classes/_local_main_.services.sitedatabase.html" class="tsd-kind-icon">Site<wbr>Database</a></li>
-								<li class="tsd-kind-class tsd-parent-kind-namespace"><a href="../classes/_local_main_.services.siteinfo.html" class="tsd-kind-icon">Site<wbr>Info</a></li>
 								<li class="tsd-kind-class tsd-parent-kind-namespace"><a href="../classes/_local_main_.services.siteprocessmanager.html" class="tsd-kind-icon">Site<wbr>Process<wbr>Manager</a></li>
 								<li class="tsd-kind-class tsd-parent-kind-namespace"><a href="../classes/_local_main_.services.siteprovisioner.html" class="tsd-kind-icon">Site<wbr>Provisioner</a></li>
 								<li class="tsd-kind-class tsd-parent-kind-namespace"><a href="../classes/_local_main_.services.siteshellentry.html" class="tsd-kind-icon">Site<wbr>Shell<wbr>Entry</a></li>
@@ -137,6 +136,7 @@
 								<li class="tsd-kind-interface tsd-parent-kind-namespace"><a href="../interfaces/_local_main_.services.idomains.html" class="tsd-kind-icon">IDomains</a></li>
 								<li class="tsd-kind-interface tsd-parent-kind-namespace"><a href="../interfaces/_local_main_.services.iexportsite.html" class="tsd-kind-icon">IExport<wbr>Site</a></li>
 								<li class="tsd-kind-interface tsd-parent-kind-namespace"><a href="../interfaces/_local_main_.services.iwpcredentials.html" class="tsd-kind-icon">IWPCredentials</a></li>
+								<li class="tsd-kind-interface tsd-parent-kind-namespace"><a href="../interfaces/_local_main_.services.lightningdbservice.html" class="tsd-kind-icon">LightningDBService</a></li>
 								<li class="tsd-kind-interface tsd-parent-kind-namespace"><a href="../interfaces/_local_main_.services.sitecerts.html" class="tsd-kind-icon">Site<wbr>Certs</a></li>
 								<li class="tsd-kind-interface tsd-parent-kind-namespace"><a href="../interfaces/_local_main_.services.wpclirunopts.html" class="tsd-kind-icon">Wp<wbr>Cli<wbr>Run<wbr>Opts</a></li>
 							</ul>
@@ -160,7 +160,7 @@
 					<div class="tsd-signature tsd-kind-icon">Port<wbr>Allocation<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">{ </span>blacklistedPorts<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">number</span><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol">; </span>ports<span class="tsd-signature-symbol">: </span><span class="tsd-signature-symbol">{}</span><span class="tsd-signature-symbol"> }</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/a54bd95/main.d.ts#L1041">main.d.ts:1041</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/ff5a185/main.d.ts#L1041">main.d.ts:1041</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-type-declaration">
@@ -186,7 +186,7 @@
 					<div class="tsd-signature tsd-kind-icon">Port<wbr>Pool<wbr>Allocation<wbr>Request<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">{}</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/a54bd95/main.d.ts#L1037">main.d.ts:1037</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/ff5a185/main.d.ts#L1037">main.d.ts:1037</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-type-declaration">
@@ -204,7 +204,7 @@
 					<div class="tsd-signature tsd-kind-icon">Port<wbr>Service<wbr>Allocation<wbr>Request<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">{}</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/a54bd95/main.d.ts#L1033">main.d.ts:1033</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/ff5a185/main.d.ts#L1033">main.d.ts:1033</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-type-declaration">
@@ -301,9 +301,6 @@
 						<a href="../classes/_local_main_.services.sitedatabase.html" class="tsd-kind-icon">Site<wbr>Database</a>
 					</li>
 					<li class=" tsd-kind-class tsd-parent-kind-namespace">
-						<a href="../classes/_local_main_.services.siteinfo.html" class="tsd-kind-icon">Site<wbr>Info</a>
-					</li>
-					<li class=" tsd-kind-class tsd-parent-kind-namespace">
 						<a href="../classes/_local_main_.services.siteprocessmanager.html" class="tsd-kind-icon">Site<wbr>Process<wbr>Manager</a>
 					</li>
 					<li class=" tsd-kind-class tsd-parent-kind-namespace">
@@ -344,6 +341,9 @@
 					</li>
 					<li class=" tsd-kind-interface tsd-parent-kind-namespace">
 						<a href="../interfaces/_local_main_.services.iwpcredentials.html" class="tsd-kind-icon">IWPCredentials</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-parent-kind-namespace">
+						<a href="../interfaces/_local_main_.services.lightningdbservice.html" class="tsd-kind-icon">LightningDBService</a>
 					</li>
 					<li class=" tsd-kind-interface tsd-parent-kind-namespace">
 						<a href="../interfaces/_local_main_.services.sitecerts.html" class="tsd-kind-icon">Site<wbr>Certs</a>
