--- a/enums/_local_.addonstatus.html
+++ b/enums/_local_.addonstatus.html
@@ -90,7 +90,7 @@
 					<div class="tsd-signature tsd-kind-icon">INSTALLED<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;installed&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/a54bd95/index.d.ts#L28">index.d.ts:28</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/ff5a185/index.d.ts#L28">index.d.ts:28</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -100,7 +100,7 @@
 					<div class="tsd-signature tsd-kind-icon">INSTALLING<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;installing&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/a54bd95/index.d.ts#L29">index.d.ts:29</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/ff5a185/index.d.ts#L29">index.d.ts:29</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -110,7 +110,7 @@
 					<div class="tsd-signature tsd-kind-icon">UPDATING<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;updating&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/a54bd95/index.d.ts#L30">index.d.ts:30</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/ff5a185/index.d.ts#L30">index.d.ts:30</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -187,13 +187,22 @@
 						<a href="../interfaces/_local_.releasemanifest.html" class="tsd-kind-icon">Release<wbr>Manifest</a>
 					</li>
 					<li class=" tsd-kind-interface tsd-parent-kind-module">
+						<a href="../interfaces/_local_.rolloutrules.html" class="tsd-kind-icon">Rollout<wbr>Rules</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-parent-kind-module">
 						<a href="../interfaces/_local_.sitebanner.html" class="tsd-kind-icon">Site<wbr>Banner</a>
 					</li>
 					<li class=" tsd-kind-interface tsd-parent-kind-module">
 						<a href="../interfaces/_local_.sitejson.html" class="tsd-kind-icon">SiteJSON</a>
 					</li>
 					<li class=" tsd-kind-type-alias tsd-parent-kind-module">
+						<a href="../modules/_local_.html#autoupdateenabled" class="tsd-kind-icon">Autoupdate<wbr>Enabled</a>
+					</li>
+					<li class=" tsd-kind-type-alias tsd-parent-kind-module">
 						<a href="../modules/_local_.html#logginglevel" class="tsd-kind-icon">Logging<wbr>Level</a>
+					</li>
+					<li class=" tsd-kind-type-alias tsd-parent-kind-module">
+						<a href="../modules/_local_.html#rolloutpercentage" class="tsd-kind-icon">Rollout<wbr>Percentage</a>
 					</li>
 					<li class=" tsd-kind-type-alias tsd-parent-kind-module">
 						<a href="../modules/_local_.html#sitelivelinkprosettings" class="tsd-kind-icon">Site<wbr>Live<wbr>Link<wbr>Pro<wbr>Settings</a>
